<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.js-lib</groupId>
	<artifactId>wood</artifactId>
	<version>1.1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>WOOD - Web Object Oriented Development</name>
	<description>WOOD tool promotes an object oriented development paradigm for user interfaces based on web technologies. It uses decomposition of complex user interfaces into user interface components.</description>
	<url>https://github.com/js-lib-com/wood</url>

	<developers>
		<developer>
			<name>Iulian Rotaru</name>
			<email>iulian@js-lib.com</email>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
		</license>
	</licenses>

	<scm>
		<connection>https://github.com/js-lib-com/wood.git</connection>
		<url>https://github.com/js-lib-com/wood</url>
	</scm>

	<properties>
		<project.version>1.1.0-SNAPSHOT</project.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<modules>
		<module>wood-core</module>
		<module>wood-build</module>
		<module>wood-preview</module>
		<module>wood-cli</module>
		<module>wood-update</module>
		<module>wood-assembly</module>
	</modules>

	<dependencies>
		<dependency>
			<groupId>com.js-lib</groupId>
			<artifactId>js-commons</artifactId>
			<version>1.3.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.js-lib</groupId>
			<artifactId>js-dom-api</artifactId>
			<version>1.2-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.js-lib</groupId>
			<artifactId>js-dom</artifactId>
			<version>1.2.0-SNAPSHOT</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.js-lib</groupId>
			<artifactId>js-log4j</artifactId>
			<version>1.3.0-SNAPSHOT</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>2.10.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-junit</artifactId>
			<version>2.0.0.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>3.0.0-M1</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<defaultGoal>deploy</defaultGoal>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.0.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.0.1</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
								<configuration>
									<show>private</show>
									<additionalOptions>
										<additionalOption>-Xdoclint:none</additionalOption>
									</additionalOptions>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.5</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-deploy-plugin</artifactId>
						<version>3.0.0-M1</version>
						<configuration>
							<skip>false</skip>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>js-lib</id>
			<url>http://maven.js-lib.com/</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>js-lib</id>
			<url>http://maven.js-lib.com/</url>
		</pluginRepository>
	</pluginRepositories>

	<distributionManagement>
		<snapshotRepository>
			<id>js-lib</id>
			<url>http://maven.js-lib.com/</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
</project>